--- a/index.html
+++ b/index.html
@@ -44,7 +44,54 @@
       <button type="submit">Enviar Desafio ✊🏽</button>
     </form>
   </div>
+<section id="solucoes" style="padding: 40px; background-color: #f9f9f9;">
+  <h2 style="color:#1f8b4c; text-align:center; font-size:2em; margin-bottom: 30px;">
+    🧬 Painel de Soluções Entregues – D1.VOX
+  </h2>
 
+  <div style="max-width: 1000px; margin: auto; font-family: Arial, sans-serif;">
+    
+    <!-- SOLUÇÃO 1 -->
+    <div style="background: white; padding: 20px; margin-bottom: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.05);">
+      <h3 style="color:#1f8b4c;">💧 CTX-432 – Filtro Biointeligente Comunitário</h3>
+      <p><strong>Status:</strong> Protótipo validado em oficinas locais</p>
+      <p><strong>Área:</strong> Água potável e prevenção da cólera</p>
+      <p><strong>Descrição:</strong> Filtro híbrido com carvão de coco, areia, moringa e camada microbiológica simbiótica. Capacidade para até 80L/dia. Adaptado para escolas, zonas rurais e ambientes de emergência.</p>
+      <a href="https://dala35.github.io/k-lera-KiA-vs-Sistema-Actual-/" target="_blank" style="color:#1f8b4c;">🔗 Ver Documento Comparativo</a>
+    </div>
+
+    <!-- SOLUÇÃO 2 -->
+    <div style="background: white; padding: 20px; margin-bottom: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.05);">
+      <h3 style="color:#1f8b4c;">🧪 BioSoro KIA RX – Reidratação Regenerativa</h3>
+      <p><strong>Status:</strong> Formulação pronta para fase piloto</p>
+      <p><strong>Área:</strong> Tratamento de cólera e infecções intestinais</p>
+      <p><strong>Descrição:</strong> Solução oral com glicose, sais, moringa, zinco e peptídeos regenerativos. Redução de mortalidade projetada >92%.</p>
+      <a href="https://dala35.github.io/k-lera-KiA-vs-Sistema-Actual-/" target="_blank" style="color:#1f8b4c;">🔗 Ver Documento Técnico</a>
+    </div>
+
+    <!-- SOLUÇÃO 3 -->
+    <div style="background: white; padding: 20px; margin-bottom: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.05);">
+      <h3 style="color:#1f8b4c;">🧠 CTX‑REGENERATIVO™ – Terapia para Anemia Falciforme</h3>
+      <p><strong>Status:</strong> Simulação validada com IA e CRISPR</p>
+      <p><strong>Área:</strong> Terapia genética afrocentrada</p>
+      <p><strong>Descrição:</strong> Plataforma de simulação com lógica condicional BioAI‑CTX, baseada em inflamação crítica, baixa HbF e ausência de risco de mosaico genético. Eficácia projetada: 92,7%</p>
+      <a href="https://dala35.github.io/CTX-REGENETIVO/" target="_blank" style="color:#1f8b4c;">🔗 Ver Simulador em Tempo Real</a>
+    </div>
+
+    <!-- SOLUÇÃO 4 -->
+    <div style="background: white; padding: 20px; margin-bottom: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.05);">
+      <h3 style="color:#1f8b4c;">🌍 D1.VOX – Painel de Desafios & Provas</h3>
+      <p><strong>Status:</strong> Ativo</p>
+      <p><strong>Área:</strong> Cooperação, diplomacia de inovação, curadoria pública</p>
+      <p><strong>Descrição:</strong> Sistema de resposta regenerativa baseado em desafios de impacto social, com compromisso de cura e solicitação de apoio internacional ético.</p>
+      <a href="https://dala35.github.io/D1.Vox/" target="_blank" style="color:#1f8b4c;">🔗 Ver Painel Oficial</a>
+    </div>
+
+    <p style="text-align:center; margin-top:40px; font-style:italic; color:#666;">
+      Este painel será atualizado conforme novas soluções forem ativadas no ecossistema DALA CURE OS ✊🏽
+    </p>
+  </div>
+</section>
   <div class="footer">
     <p>🧬 Sistema DALA CURE OS – Protocolo D1.VOX | Licença Afrokódica 𓆃</p>
   </div>
