--- a/index.html
+++ b/index.html
@@ -1,6 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
+  <section id="solucoes" style="padding: 40px; background-color: #f4f4f4;">
+  <div style="max-width: 900px; margin: auto;">
+    <h2 style="color: #1f8b4c; text-align: center; font-size: 2em;">✅ Soluções Já Entregues</h2>
+    <p style="text-align: center; margin-bottom: 30px;">Exemplos reais de impacto gerado por D1.VOX e o Ecossistema DALA.</p>
+
+    <div style="display: grid; gap: 20px; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));">
+      <div style="background: white; border-radius: 10px; padding: 20px; box-shadow: 0 0 8px rgba(0,0,0,0.05);">
+        <h3 style="color: #1f8b4c;">💧 Filtro CTX‑432</h3>
+        <p>Implementado com sucesso em zonas sem água potável no Bié. Usando materiais locais e IA educativa.</p>
+      </div>
+      <div style="background: white; border-radius: 10px; padding: 20px; box-shadow: 0 0 8px rgba(0,0,0,0.05);">
+        <h3 style="color: #1f8b4c;">🧠 KIA.BIOPULSO</h3>
+        <p>Modelo preditivo de surtos com sensores offline e IA ética para Angola rural.</p>
+      </div>
+      <div style="background: white; border-radius: 10px; padding: 20px; box-shadow: 0 0 8px rgba(0,0,0,0.05);">
+        <h3 style="color: #1f8b4c;">🧬 Terapia CTX‑REGENERATIVO™</h3>
+        <p>Simulador ativo com IA embarcada e lógica bioética, já disponível online com multilinguismo.</p>
+      </div>
+      <div style="background: white; border-radius: 10px; padding: 20px; box-shadow: 0 0 8px rgba(0,0,0,0.05);">
+        <h3 style="color: #1f8b4c;">📦 BioSoro KIA RX</h3>
+        <p>Fórmula funcional contra cólera, com produção local e integração de saberes africanos.</p>
+      </div>
+    </div>
+
+    <p style="text-align:center; margin-top: 30px;">
+      <a href="#desafios" style="background:#1f8b4c; color:white; padding:12px 25px; border-radius:5px; text-decoration:none;">🚀 Apresentar um Desafio</a>
+    </p>
+  </div>
+  </section>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>DESAFIO D1.VOX – Submeta um Problema Real</title>
